--- a/style.css
+++ b/style.css
@@ -4,13 +4,19 @@ body {
 }
 
 .header {
+    padding: 50px;
     background-image: url(images/head1.jpg);
     height: 50%;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    text-align: center;
     position: absolute;
-    color: white;
+}
+
+.ttext {
+    padding: 60px;
+    text-align: center;
+    color: whitesmoke;
+    font-size: 20px;
 }
