--- a/style.css
+++ b/style.css
@@ -4,14 +4,13 @@ body {
 }
 
 .header {
-    padding: 50px;
+
     background-image: url(images/head1.jpg);
     height: 30%;
     width: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: absolute;
 }
 
 .ttext {
@@ -28,4 +27,75 @@ body {
     border-radius: 10px;
     background-image: linear-gradient(#ac0000, #da2417b9);
     color: #fff;
+}
+
+.mid {
+    text-align: center;
+    font-size: 20px;
+
+}
+
+.donatebtn {
+    background-color: rgb(14, 74, 114);
+    border: none;
+    color: white;
+    padding: 40px 40px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.secdon {
+    text-align: center;
+    font-size: 20px;
+}
+
+
+.food {
+    height: 20%;
+    width: 20%;
+    margin: 2%;
+    padding: 2%;
+    box-shadow: 5px 10px 5px rgb(243, 222, 189);
+    background-color: antiquewhite;
+    text-align: left;
+}
+
+.expoloar_area {
+    display: flex;
+    justify-content: center;
+}
+
+
+.shelter {
+    height: 20%;
+    width: 20%;
+    margin: 2%;
+    padding: 2%;
+    box-shadow: 5px 10px 5px rgb(33, 74, 110);
+    background-color: gainsboro;
+    text-align: left;
+
+}
+
+.frame {
+    height: 20%;
+    width: 20%;
+    margin: 2%;
+    padding: 2%;
+    box-shadow: 5px 10px 5px cadetblue;
+    background-color: aquamarine;
+    text-align: left;
+
+}
+
+.body {
+    display: flex;
+}
+
+.bodiv {
+    width: 50%;
+    padding: 10%;
+    font-size: 30px;
 }
