--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ body {
 }
 
 .donatebtn {
-    background-color: rgb(14, 74, 114);
+    background-color: #ebe5e6;
     border: none;
-    color: white;
+    color: rgb(20, 13, 13);
     padding: 40px 40px;
     text-align: center;
     text-decoration: none;
@@ -62,7 +62,7 @@ body {
     text-align: left;
 }
 
-.expoloar_area {
+.area {
     display: flex;
     justify-content: center;
 }
@@ -98,4 +98,53 @@ body {
     width: 50%;
     padding: 10%;
     font-size: 30px;
+}
+
+.email {
+    background-color: wheat;
+    margin-left: 40%;
+    margin-right: 35%;
+    padding: 70px;
+    text-align: center;
+    border-radius: 10px
+}
+
+.email-input {
+    margin-top: 60px;
+    height: 30px;
+    width: 250px;
+    border: none;
+    outline: none;
+    border-radius: 2px;
+    background-color: #bbb8b5;
+    color: #3a3838;
+    font-weight: bold;
+}
+
+.subscribe-btn {
+    background-color: #e00833;
+    border-radius: 2px;
+    border: none;
+    font-weight: 600;
+    height: 32px;
+    width: 100px;
+    margin-left: -30px;
+}
+
+.subscribe-btn a {
+    text-decoration: none;
+    color: #FFF;
+}
+
+.footer {
+    background-color: black;
+    height: 140px;
+    text-align: center;
+    margin-top: 70px;
+    font-size: 20px;
+    color: white;
+}
+
+.humble {
+    color: rgb(202, 14, 51);
 }
